add jdk.internal.logger to list of opened packages